--- a/package.json
+++ b/package.json
@@ -4,14 +4,27 @@
   "version": "1.0.0",
   "description": "Convert CS2 VCFG files to a single CFG file",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "node --test tests/**/*.test.ts",
+    "check": "svelte-check --tsconfig ./tsconfig.json && tsc --noEmit --project ./tests/tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "format": "prettier --write .",
+    "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
+    "@eslint/compat": "^2.0.0",
+    "@eslint/js": "^9.39.2",
     "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
+    "@types/node": "^25.0.3",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-svelte": "^3.14.0",
     "svelte": "^5.0.0",
+    "svelte-check": "^4.3.5",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.52.0",
     "vite": "^7.0.0"
   },
   "volta": {
